# SimpleBoard

./: Dockerfile  Jenkinsfile  run_tests.sh
Server/include/main/: Resource.hpp
Server/include/print/: PrintCPUInterfaceInfo.hpp  PrintInterface.hpp  PrintMemoryUsageInfo.hpp  PrintNetworkUsageInfo.hpp  ProgressBar.hpp  TitleBar.hpp
Server/include/resource/: CPUResource.hpp  MemoryResource.hpp  NetworkResource.hpp  SystemInterfaceInfo.hpp  SystemResource.hpp  SystemResourceSerializer.hpp  SystemUsageInfo.hpp  ThreadCPUUsage.hpp  ThreadMemoryUsage.hpp  ThreadNetworkUsage.hpp
Server/src/: CMakeLists.txt
Server/src/main/: Resource.cpp  main.cpp
Server/src/print/: FontColor.cpp  PrintCPUInterfaceInfo.cpp  PrintInterface.cpp  PrintMemoryUsageInfo.cpp  PrintNetworkUsageInfo.cpp  ProgressBar.cpp  TitleBar.cpp
Server/src/resource/: CPUInterfaceInfo.cpp  CPUResource.cpp  CPUUsageInfo.cpp  MemoryResource.cpp  MemoryUsageInfo.cpp  NetworkInterfaceList.cpp  NetworkResource.cpp  NetworkUsageInfo.cpp  SystemInterfaceInfo.cpp  SystemResource.cpp  SystemResourceSerializer.cpp  SystemUsageInfo.cpp  ThreadCPUUsage.cpp  ThreadMemoryUsage.cpp  ThreadNetworkUsage.cpp
Server/src/service/: PrintService.cpp  ServerService.cpp  ServiceFactory.cpp  ServiceInterface.cpp  SystemResourceService.cpp
Server/src/test/: print_test.cpp  resource_test.cpp  service_test.cpp  util_test.cpp
Server/src/util/: ArgvItem.cpp  ArgvUtil.cpp  AsioBroadcastServerThread.cpp  AsioSession.cpp  AsioSessionList.cpp  Result.cpp  ResultList.cpp  StringUtil.cpp  ThreadManager.cpp
(+15 files in other folders)
